[project]
name = "kaggle-road-accident-risk-prediction"
version = "0.1.0"
description = "A simple project to predict road accident risks using machine learning based on Kaggle Tabular Playground Series S5E10."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xgboost==3.0.0",
    "kaggle",
    "matplotlib",
    "pandas",
    "streamlit",
    "shap",
    "optuna"
]
